@@ -1,3 +1,14 @@
+Changes from version 1.3.4-1:
+	- Added 'd' option to splitformat to create suffixes starting
+	  at .001 instead of .000
+	- Added "log" mode to combine hashlog and errlog files.
+	  This mode will append existing files, not overwrite them.
+	- Created option to reset the default block size to 512 bytes 
+	  at compile time. (./configure CFLAGS="-DDEFAULT_BLOCKSIZE=512")
+	- In the final output, added the number of bytes in/out in 
+	  addition to the number of records.
+
+	
 Changes from version 1.2.2:
 	- Added ability to write to multiple output files.
 	- Added split capability with the "split=" and "splitformat=" switches.
